vlib/v/checker/tests/struct_not_init_err.vv
module main

import v.ast

struct Data {
}

type DataCollection = Data

fn main() {
	_ := Data
	_ := DataCollection
	_ := ast.Type
	// _ := gui.Animate // for vpm mod
}
